src/sqlparser.java
/* Generated By:JavaCC: Do not edit this line. sqlparser.java */
import java.util.ArrayList;

public class sqlparser implements sqlparserConstants {
  // define static variable
  public static final int PRINT_SYNTAX_ERROR = 0;
  public static final int PRINT_CREATE_TABLE = 1;
  public static final int PRINT_DROP_TABLE = 2;
  public static final int PRINT_DESC_TABLE = 3;
  public static final int PRINT_INSERT_TABLE = 4;
  public static final int PRINT_DELETE_TABLE = 5;
  public static final int PRINT_SELECT_TABLE = 6;
  public static final int PRINT_SHOW_TABLE = 7;

  public static void handleQuery(Query q) throws Exception, MyException
  {
    q.execute();
    System.out.print("DB_2009-13389> ");
  }

  static final public void command() throws ParseException, Exception, MyException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CREATE_TABLE:
    case DROP_TABLE:
    case INSERT_INTO:
    case DESC:
    case DELETE_FROM:
    case SELECT:
    case SHOW_TABLES:
      queryList();
      break;
    case EXIT:
      jj_consume_token(EXIT);
      jj_consume_token(SEMICOLON);
                DBManager dbman = DBManager.dbman();
                dbman.close();
      System.exit(0);
      break;
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void queryList() throws ParseException, Exception, MyException {
    Query q;
    label_1:
    while (true) {
      q = query();
      jj_consume_token(SEMICOLON);
      if(q != null) {
        handleQuery(q);
     }else {
                System.out.println("Unsupported Query");
                System.out.printf("DB_2009-13389> ");
     }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CREATE_TABLE:
      case DROP_TABLE:
      case INSERT_INTO:
      case DESC:
      case DELETE_FROM:
      case SELECT:
      case SHOW_TABLES:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_1;
      }
    }
  }

// query is createtable||droptable||desc||insert||delete||select||showtable query
  static final public Query query() throws ParseException, Exception, MyException {
  Query q;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CREATE_TABLE:
      q = createTableQuery();
             {if (true) return q;}
      break;
    case DROP_TABLE:
      q = dropTableQuery();
                {if (true) return q;}
      break;
    case DESC:
      q = descQuery();
       {if (true) return q;}
      break;
    case INSERT_INTO:
      q = insertQuery();
       {if (true) return q;}
      break;
    case DELETE_FROM:
      q = deleteQuery();
       {if (true) return q;}
      break;
    case SELECT:
      q = selectQuery();
       {if (true) return q;}
      break;
    case SHOW_TABLES:
      q = showTableQuery();
       {if (true) return q;}
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public CreateTableQuery createTableQuery() throws ParseException, Exception, MyException {
  String name;
  CreateTableQuery query;
    jj_consume_token(CREATE_TABLE);
    name = tableName();
    query = new CreateTableQuery(name);
    tableElementList(query);
        {if (true) return query;}
    throw new Error("Missing return statement in function");
  }

  static final public Query dropTableQuery() throws ParseException {
  String t;
    jj_consume_token(DROP_TABLE);
    t = tableName();
        DropTableQuery query = new DropTableQuery(t);
        {if (true) return query;}
    throw new Error("Missing return statement in function");
  }

  static final public DescQuery descQuery() throws ParseException, MyException, Exception {
  String t;
    jj_consume_token(DESC);
    t = tableName();
    DescQuery query = new DescQuery(t);
    {
      {if (true) return query;}
    }
    throw new Error("Missing return statement in function");
  }

  static final public void tableElementList(CreateTableQuery q) throws ParseException, MyException {
    jj_consume_token(LEFT_PAREN);
    tableElement(q);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_2;
      }
      jj_consume_token(COMMA);
      tableElement(q);
    }
    jj_consume_token(RIGHT_PAREN);
  }

  static final public void tableElement(CreateTableQuery q) throws ParseException, MyException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LEGAL_IDENTIFIER:
      columnDefinition(q);
      break;
    case PRIMARY_KEY:
    case FOREIGN_KEY:
      tableConstraintDefinition(q);
      break;
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void columnDefinition(CreateTableQuery q) throws ParseException, MyException {
  boolean notnull = false;
  String colname;
  DataType type;
    colname = columnName();
    type = dataType();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NOT_NULL:
      jj_consume_token(NOT_NULL);
      notnull = true;
      break;
    default:
      jj_la1[5] = jj_gen;
      ;
    }
    q.addColumn(new Column(colname, type, notnull));
  }

  static final public void tableConstraintDefinition(CreateTableQuery q) throws ParseException, MyException {
  PrimaryKeyConstraint a;
  ReferentialConstraint b;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PRIMARY_KEY:
      a = primaryKeyConstraint();
            q.addPrimaryKeyConst(a);
      break;
    case FOREIGN_KEY:
      b = referentialConstraint();
                q.addReferentialKeyConst(b);
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public PrimaryKeyConstraint primaryKeyConstraint() throws ParseException, MyException {
        ArrayList<String > list;
    jj_consume_token(PRIMARY_KEY);
    list = columnNameList();
    {if (true) return new PrimaryKeyConstraint(list);}
    throw new Error("Missing return statement in function");
  }

  static final public ReferentialConstraint referentialConstraint() throws ParseException, MyException {
  ArrayList<String > list;
  ArrayList<String > namelist;
  String colname;
    jj_consume_token(FOREIGN_KEY);
    list = columnNameList();
    jj_consume_token(REFERENCES);
    colname = tableName();
    namelist = columnNameList();
        {if (true) return new ReferentialConstraint(list, colname, namelist);}
    throw new Error("Missing return statement in function");
  }

  static final public ArrayList<String > columnNameList() throws ParseException {
  ArrayList<String > list = new ArrayList<String >();
  String s;
    jj_consume_token(LEFT_PAREN);
    s = columnName();
    list.add(s);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_3;
      }
      jj_consume_token(COMMA);
      s = columnName();
        list.add(s);
    }
    jj_consume_token(RIGHT_PAREN);
    {if (true) return list;}
    throw new Error("Missing return statement in function");
  }

  static final public DataType dataType() throws ParseException, MyException {
  Token length;
  DataType type;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT:
      jj_consume_token(INT);
                                type = new DataType(0);
      break;
    case CHAR:
      jj_consume_token(CHAR);
      jj_consume_token(LEFT_PAREN);
      length = jj_consume_token(INT_VALUE);
      jj_consume_token(RIGHT_PAREN);
             type = new DataType(1, (Integer.parseInt(length.toString())));
      break;
    case DATE:
      jj_consume_token(DATE);
                  type = new DataType(2);
      break;
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
        {if (true) return type;}
    throw new Error("Missing return statement in function");
  }

  static final public String tableName() throws ParseException {
  Token t;
    t = jj_consume_token(LEGAL_IDENTIFIER);
    {if (true) return t.toString().toLowerCase();}
    throw new Error("Missing return statement in function");
  }

  static final public String columnName() throws ParseException {
  Token t;
    t = jj_consume_token(LEGAL_IDENTIFIER);
        {if (true) return t.toString().toLowerCase();}
    throw new Error("Missing return statement in function");
  }

// insert query consists of <INSERT_INTO > + tableName() + insertColumnsandSources()
  static final public InsertQuery insertQuery() throws ParseException, MyException {
  String name;
  InsertQuery query;
  ArrayList<String > colNameList;
    jj_consume_token(INSERT_INTO);
    name = tableName();
    query = insertColumnsandSources(name);
                {if (true) return query;}
    throw new Error("Missing return statement in function");
  }

// insertColumnsandSources consists of [columnNameList()]? + valueList()
  static final public InsertQuery insertColumnsandSources(String name) throws ParseException, MyException {
        InsertQuery q;
        ArrayList<String > c = new ArrayList<String > ();
        ArrayList<Value > v;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LEFT_PAREN:
      c = columnNameList();
      break;
    default:
      jj_la1[9] = jj_gen;
      ;
    }
    v = valueList();
          if(c.size() == 0) {
            q = new InsertQuery(name, v);
          }else {
            q = new InsertQuery(name, c, v);
          }
          {if (true) return q;}
    throw new Error("Missing return statement in function");
  }

//valueList() consists of <VALUES > + ( + value + [< COMMA >, value()]? + )
  static final public ArrayList<Value > valueList() throws ParseException {
  ArrayList<Value > valList = new ArrayList<Value > ();
  Value a;
    jj_consume_token(VALUES);
    jj_consume_token(LEFT_PAREN);
    a = value();
          valList.add(a);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[10] = jj_gen;
        break label_4;
      }
      jj_consume_token(COMMA);
      a = value();
                valList.add(a);
    }
    jj_consume_token(RIGHT_PAREN);
                {if (true) return valList;}
    throw new Error("Missing return statement in function");
  }

//define comparable value
  static final public Value comparableValue() throws ParseException {
  Token t;
  Value a;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT_VALUE:
      t = jj_consume_token(INT_VALUE);
                    a = new Value(0, t.toString());
      break;
    case CHAR_STRING:
      t = jj_consume_token(CHAR_STRING);
                    String s= t.toString();
                    a = new Value(1, s.substring(1, s.length()-1));
      break;
    case DATE_VALUE:
      t = jj_consume_token(DATE_VALUE);
                    a = new Value(2,t.toString());
      break;
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
          {if (true) return a;}
    throw new Error("Missing return statement in function");
  }

//values are null or comparable value
  static final public Value value() throws ParseException {
  Value a;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NULL:
      jj_consume_token(NULL);
                    a = new Value(3);
      break;
    case INT_VALUE:
    case CHAR_STRING:
    case DATE_VALUE:
      a = comparableValue();
      break;
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
          {if (true) return a;}
    throw new Error("Missing return statement in function");
  }

//select query consists of <SELECT > + selectList() + tableExpr()
  static final public Query selectQuery() throws ParseException {
    jj_consume_token(SELECT);
    selectList();
    tableExpr();
                {if (true) return null;}
    throw new Error("Missing return statement in function");
  }

//select list consists of <STAR > | selectedColumn() + [<COMMA >,selectedColumn()]*	
  static final public void selectList() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case STAR:
      jj_consume_token(STAR);
      break;
    case LEGAL_IDENTIFIER:
      selectedColumn();
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[13] = jj_gen;
          break label_5;
        }
        jj_consume_token(COMMA);
        selectedColumn();
      }
      break;
    default:
      jj_la1[14] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

// use LOOKAHEAD to avoid TOKEN ambiguity
// selectedColumn = (tableName+< PERIOD >)? + columnName() + (< AS >columnName)?
  static final public void selectedColumn() throws ParseException {
    if (jj_2_1(2)) {
      tableName();
      jj_consume_token(PERIOD);
    } else {
      ;
    }
    columnName();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case AS:
      jj_consume_token(AS);
      columnName();
      break;
    default:
      jj_la1[15] = jj_gen;
      ;
    }
  }

// tableExpr = fromClause + (whereClause)?
  static final public void tableExpr() throws ParseException {
    fromClause();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case WHERE:
      whereClause();
      break;
    default:
      jj_la1[16] = jj_gen;
      ;
    }
  }

// fromClause = < FROM > + tableReflist()
  static final public void fromClause() throws ParseException {
    jj_consume_token(FROM);
    tableReferenceList();
  }

// tableReflist() = referedTable + (< COMMA > + referedTable )*
  static final public void tableReferenceList() throws ParseException {
    referedTable();
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[17] = jj_gen;
        break label_6;
      }
      jj_consume_token(COMMA);
      referedTable();
    }
  }

// referedTable() = tableName + (< AS >tableName)?
  static final public void referedTable() throws ParseException {
    tableName();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case AS:
      jj_consume_token(AS);
      tableName();
      break;
    default:
      jj_la1[18] = jj_gen;
      ;
    }
  }

// whereclause consists of <WHERE > + boolValueexpr
  static final public BooleanValueExpr whereClause() throws ParseException {
  BooleanValueExpr e;
    jj_consume_token(WHERE);
    e = booleanValueExpr();
                {if (true) return e;}
    throw new Error("Missing return statement in function");
  }

//boolValueexpr = booleanTerm | booleanTerm <OR > booleanValueExpr
//Same as boolValueExpr = booleanTerm + (< OR > booleanTerm)*
//disassembling recursive term 
  static final public BooleanValueExpr booleanValueExpr() throws ParseException {
  BooleanValueExpr e = new BooleanValueExpr();
  BooleanTerm t;
    t = booleanTerm();
                e.addToList(t);
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OR:
        ;
        break;
      default:
        jj_la1[19] = jj_gen;
        break label_7;
      }
      jj_consume_token(OR);
      t = booleanTerm();
                e.addToList(t);
    }
                {if (true) return e;}
    throw new Error("Missing return statement in function");
  }

//booleanTerm = booleanfactor | booleanfactor <AND > booleanterm
//Same as booleanTerm = booleanfactor + (<AND> booleanfactor)*
//disassembling recursive term 
  static final public BooleanTerm booleanTerm() throws ParseException {
  BooleanTerm term = new BooleanTerm() { };
  BooleanFactor f;
    f = booleanFactor();
                term.addToList(f);
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AND:
        ;
        break;
      default:
        jj_la1[20] = jj_gen;
        break label_8;
      }
      jj_consume_token(AND);
      f = booleanFactor();
                        term.addToList(f);
    }
                {if (true) return term;}
    throw new Error("Missing return statement in function");
  }

//booleanfactor = (< NOT >)? + booleanTest;
  static final public BooleanFactor booleanFactor() throws ParseException {
  BooleanTest t;
  BooleanFactor f;
  boolean not = false;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NOT:
      jj_consume_token(NOT);
             not = true;
      break;
    default:
      jj_la1[21] = jj_gen;
      ;
    }
    t = booleanTest();
          f = new BooleanFactor(t);
          if(not)
                f.setnot();
          {if (true) return f;}
    throw new Error("Missing return statement in function");
  }

// booleantest = predicate | parenthesizedBoolexpr
  static final public BooleanTest booleanTest() throws ParseException {
        Predicate p;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LEGAL_IDENTIFIER:
    case INT_VALUE:
    case CHAR_STRING:
    case DATE_VALUE:
      p = predicate();
                {if (true) return new BooleanTest(p);}
      break;
    case LEFT_PAREN:
      parenthesizedBoolExpr();
      break;
    default:
      jj_la1[22] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

// parenthesizedBoolexpr = ( + booleanvalueExpr + )
  static final public BooleanValueExpr parenthesizedBoolExpr() throws ParseException {
  BooleanValueExpr e;
    jj_consume_token(LEFT_PAREN);
    e = booleanValueExpr();
    jj_consume_token(RIGHT_PAREN);
          {if (true) return e;}
    throw new Error("Missing return statement in function");
  }

// use lookahead to prevent TOKEN ambiguity
// predicate = comparison Predicate | null Predicate
  static final public Predicate predicate() throws ParseException {
  ComparisonPredicate c;
  NullPredicate n;
  Predicate p;
    if (jj_2_2(2)) {
      c = comparisonPredicate();
                                p = new Predicate(c);
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LEGAL_IDENTIFIER:
        n = nullPredicate();
                                p = new Predicate(n);
        break;
      default:
        jj_la1[23] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
                {if (true) return p;}
    throw new Error("Missing return statement in function");
  }

// comparison Predicate = comparion Operand + < COMP_OP > + comparison Operand
  static final public ComparisonPredicate comparisonPredicate() throws ParseException {
  CompOperand a;
  CompOperand b;
  Token t;
  String op;
    a = compOperand();
    t = jj_consume_token(COMP_OP);
                op = t.toString();
    b = compOperand();
                {if (true) return new ComparisonPredicate(a, b, op);}
    throw new Error("Missing return statement in function");
  }

// comparison Operand is comparable value | ( (tableName() + < PERIOD >)? columnName)
// use lookahead for same reason to above
  static final public CompOperand compOperand() throws ParseException {
  String tn="";
  String cn;
  CompOperand c;
  Value v = null;
  ColAlias a = null;
  boolean isdotted = false;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT_VALUE:
    case CHAR_STRING:
    case DATE_VALUE:
      v = comparableValue();
                  c = new CompOperand(v);
      break;
    case LEGAL_IDENTIFIER:
      if (jj_2_3(2)) {
        tn = tableName();
        jj_consume_token(PERIOD);
                            isdotted = true;
      } else {
        ;
      }
      cn = columnName();
                          if(isdotted) {
                                a = new ColAlias(tn, cn);
                         }else {
                                a = new ColAlias(cn);
                         }
                         c = new CompOperand(a);
      break;
    default:
      jj_la1[24] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
        {if (true) return c;}
    throw new Error("Missing return statement in function");
  }

// null predicate = ( tableName()< PERIOD >)? + columnName() + nullOperation()
  static final public NullPredicate nullPredicate() throws ParseException {
  String tn = "";
  String cn;
  boolean dotted=false;
  boolean t;
  NullPredicate n;
  ColAlias ca;
    if (jj_2_4(2)) {
      tn = tableName();
      jj_consume_token(PERIOD);
          dotted = true;
    } else {
      ;
    }
    cn = columnName();
    t = nullOperation();
    if(dotted) {
                ca = new ColAlias(tn, cn);
    }else {
                ca = new ColAlias(cn);
    }
        {if (true) return new NullPredicate(t, ca);}
    throw new Error("Missing return statement in function");
  }
